
how to automatically adjust axes to make direct labels immediately
legible? For multipanel plots you would have to adjust all the scales!

method for .zoo plots?

handling custom # of bins/custom densityplot params?

problems with plotting color labels in lattice when col= is specified,
see etc/individual.R

see etc/xYplot.R for a problem with plotting some weird trellis
objects.

2.3 

Works with ggplot2 0.9.0

dlgrobs have names == GRID.dlgrob.method if method is a character
string.

Tiebreaking for qp.labels when we are doing lineplots.

2.2 bugfixes

ggplot2 autopicker simpler.

use aes_string instead of aes in direct.label.ggplot

2.1 31 August 2011 -- bugfixes

gapply can take positional arguments like gapply(d,subset,y==max(y))

melt is no longer used in top.bumptwice

2.0 29 August 2011

dl.move and static.labels allow specification of label positions in
terms of the displayed axes! Internally, they convert the
user-specified numbers to cm.

Figured out how to calculate label bounding boxes for ggplot2, by
returning dlgrobs from the draw() method of the new
GeomDirectLabel. The special drawDetails.dlgrob method is called
within the plotting viewport, so we can calculate the bounding boxes
of the text before they are drawn.

In fact all Positioning Methods which take into account visual
distance need to calculate visual distance instead of plotting
coordinate distance. ie smart.grid tries to find the label position
which is closest to the center, but this can be very skewed if x and y
axes are not on the same scale. This is now fixed since all
coordinates are converted to cm before being passed to Positioning
Methods.

fontface and fontfamily for direct labels are now supported even on
ggplot2, thanks to the new dlgrob backends! See example(dlcompare).

1.4

if(require(pkg)) in examples so you can see the rest even if you don't
have pkg

1.3

delete empty.grid.fun ... now to use empty.grid, do i.e.
list("get.means","empty.grid") 